# openagile_2

./: .gitignore  AGENTS.md  AGENT_STATE.yaml  Epm_governance_sdlc_stlc·md  INFRASTRUCTURE_CONTRACT.md  ORCHESTRATOR_MISSION.md  RECOVERY_PLAN.md  codeowner  comprehensive_diagnostics.sh  diagnose-directories.sh  docker-compose.yml  docker-compose.yml.old  epm_audit_report.md  init_database_fix.sh  migrate-nginx-to-traefik.sh  n8n_backup_2025-12-13.sql  open_project_log.txt  senior_engineers_build.md  setup-directories.sh
frappe_docker/apps/tutor_hub/: __init__.py  pyproject.toml
frappe_docker/apps/tutor_hub/frontend/: index.html  package.json  tailwind.config.ts  vite.config.ts
frappe_docker/apps/tutor_hub/frontend/src/: App.tsx  index.css  main.tsx
frappe_docker/apps/tutor_hub/frontend/src/components/common/: RatingStars.tsx  SubjectBadge.tsx
frappe_docker/apps/tutor_hub/frontend/src/components/home/: CTASection.tsx  HeroCarousel.tsx  HeroSection.tsx  HowItWorksSection.tsx  StatsSection.tsx  SubjectsSection.tsx  (+1 more)
frappe_docker/apps/tutor_hub/frontend/src/hooks/: useLandingData.ts
frappe_docker/apps/tutor_hub/frontend/src/types/: landing.ts
frappe_docker/apps/tutor_hub/tutor_hub/: __init__.py  api.py  hooks.py  modules.txt  patches.txt
frappe_docker/apps/tutor_hub/tutor_hub/config/: __init__.py
frappe_docker/apps/tutor_hub/tutor_hub/public/frontend/: .gitkeep
frappe_docker/apps/tutor_hub/tutor_hub/public/images/: .gitkeep
frappe_docker/apps/tutor_hub/tutor_hub/templates/: __init__.py
frappe_docker/apps/tutor_hub/tutor_hub/www/: landing.html
(+967 files in other folders)
